--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -97,6 +97,7 @@ header
     &::before
       width: 0
   &-bottom
+    width: 100%
     display: flex
     justify-content: space-between
     align-items: flex-start
